--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -10,33 +10,21 @@
         </a>
         <div class="login-userheading">
           <h3>Sign In</h3>
-          <h4>Please login to your account</h4>
+          <h4>Por favor ingresa tu cuenta para iniciar</h4>
         </div>
-        <form [formGroup]="form" >
+        <form [formGroup]="form">
           <div class="form-login">
             <label>Email</label>
             <div class="form-addons">
-              <input
-                type="text"
-                placeholder="Enter your email address"
-                formControlName="email"
-                id="email"
-                [ngClass]="{
+              <input type="text" placeholder="Enter your email address" formControlName="email" id="email" [ngClass]="{
                   'is-invalid': f['email'].touched && f['email'].invalid
-                }"
-              />
+                }" />
               <img src="assets/img/icons/mail.svg" alt="img" />
             </div>
-            <div
-              class="invalid-feedback"
-              *ngIf="CustomControler?.status === 'email'"
-            >
+            <div class="invalid-feedback" *ngIf="CustomControler?.status === 'email'">
               {{ CustomControler.message }}
             </div>
-            <div
-              *ngIf="f['email'].touched && f['email'].invalid"
-              class="invalid-feedback"
-            >
+            <div *ngIf="f['email'].touched && f['email'].invalid" class="invalid-feedback">
               <div *ngIf="f['email'].errors && f['email'].errors['required']">
                 Email is required.
               </div>
@@ -48,73 +36,24 @@
           <div class="form-login">
             <label>Password</label>
             <div class="pass-group">
-              <input
-                [type]="password"
-                class="pass-input"
-                placeholder="Enter your password"
-                formControlName="password"
-                id="password"
-                [ngClass]="{
+              <input [type]="password" class="pass-input" placeholder="Enter your password" formControlName="password"
+                id="password" [ngClass]="{
                   'is-invalid': f['password'].touched && f['password'].invalid
-                }"
-              />
-              <span
-                class="fas toggle-password fa-eye"
-                (click)="onClick()"
-                *ngIf="show"
-              ></span>
-              <span
-                class="fas toggle-password fa-eye-slash"
-                (click)="onClick()"
-                *ngIf="!show"
-              ></span>
+                }" />
+              <span class="fas toggle-password fa-eye" (click)="onClick()" *ngIf="show"></span>
+              <span class="fas toggle-password fa-eye-slash" (click)="onClick()" *ngIf="!show"></span>
             </div>
           </div>
         </form>
         <div class="form-login">
           <div class="alreadyuser">
             <h4>
-              <a [routerLink]="routes.forgotPassword" class="hover-a"
-                >Forgot Password?</a
-              >
+              <a [routerLink]="routes.forgotPassword" class="hover-a">Forgot Password?</a>
             </h4>
           </div>
         </div>
         <div class="form-login">
           <a (click)="submit()" class="btn btn-login">Sign In</a>
-        </div>
-        <div class="signinform text-center">
-          <h4>
-            Don’t have an account?
-            <a [routerLink]="routes.signUp" class="hover-a">Sign Up</a>
-          </h4>
-        </div>
-        <div class="form-setlogin">
-          <h4>Or sign up with</h4>
-        </div>
-        <div class="form-sociallink">
-          <ul>
-            <li>
-              <a href="javascript:void(0);">
-                <img
-                  src="assets/img/icons/google.png"
-                  class="me-2"
-                  alt="google"
-                />
-                Sign Up using Google
-              </a>
-            </li>
-            <li>
-              <a href="javascript:void(0);">
-                <img
-                  src="assets/img/icons/facebook.png"
-                  class="me-2"
-                  alt="google"
-                />
-                Sign Up using Facebook
-              </a>
-            </li>
-          </ul>
         </div>
       </div>
     </div>
