--- a/src/app/common-component/header/header.component.html
+++ b/src/app/common-component/header/header.component.html
@@ -50,7 +50,7 @@
     <li class="nav-item nav-searchinputs">
       <div class="top-nav-search">
 
-        <a href="javascript:void(0);" class="responsive-search">
+        <!-- <a href="javascript:void(0);" class="responsive-search">
           <i class="fa fa-search"></i>
         </a>
         <form action="#">
@@ -60,8 +60,8 @@
               <span><i data-feather="search" class="feather-14"></i></span>
             </div>
           </div>
-          <!-- <a class="btn"  id="searchdiv"><img src="assets/img/icons/search.svg" alt="img"></a> -->
-        </form>
+          <a class="btn"  id="searchdiv"><img src="assets/img/icons/search.svg" alt="img"></a>
+        </form> -->
       </div>
     </li>
     <!-- /Search -->
@@ -217,13 +217,13 @@
             </div>
           </div>
           <hr class="m-0">
-          <a class="dropdown-item" [routerLink]="routes.profile"> <i class="me-2" data-feather="user"></i> My
-            Profile</a>
+          <a class="dropdown-item" [routerLink]="routes.profile"> <i class="me-2" data-feather="user"></i> Mi
+            Perfil</a>
           <a class="dropdown-item" [routerLink]="routes.generalSettings"><i class="me-2"
-              data-feather="settings"></i>Settings</a>
+              data-feather="settings"></i>Configuraciones</a>
           <hr class="m-0">
           <a class="dropdown-item logout pb-0" (click)="logout()"><img src="assets/img/icons/log-out.svg" class="me-2"
-              alt="img">Logout</a>
+              alt="img">Cerrar sesion</a>
         </div>
       </div>
     </li>
@@ -236,9 +236,9 @@
     <a href="javascript:void(0);" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><i
         class="fa fa-ellipsis-v"></i></a>
     <div class="dropdown-menu dropdown-menu-right">
-      <a class="dropdown-item" [routerLink]="routes.profile">My Profile</a>
-      <a class="dropdown-item" [routerLink]="routes.generalSettings">Settings</a>
-      <a class="dropdown-item" [routerLink]="routes.signIn">Logout</a>
+      <a class="dropdown-item" [routerLink]="routes.profile">Mi Perfil</a>
+      <a class="dropdown-item" [routerLink]="routes.generalSettings">Configuraciones</a>
+      <a class="dropdown-item" [routerLink]="routes.signIn">Cerrar sesion</a>
     </div>
   </div>
   <!-- /Mobile Menu -->
